--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
     <description>demo</description>
     <properties>
         <java.version>8</java.version>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+
     </properties>
     <dependencies>
         <dependency>
